// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should select DOM elements 1`] = `
<body>
  <div
    class="foo"
  >
    
      
    <span
      id="baz"
    >
      
      
      <button
        id="bar"
      >
        
    
      </button>
    </span>
  </div>
</body>
`;

exports[`should select DOM elements 2`] = `<head />`;

exports[`should select DOM elements 3`] = `
Array [
  <div
    class="foo"
  >
    
      
    <span
      id="baz"
    >
      
      
      <button
        id="bar"
      >
        
    
      </button>
    </span>
  </div>,
]
`;

exports[`should select DOM elements 4`] = `
Array [
  <div
    class="foo"
  >
    
      
    <span
      id="baz"
    >
      
      
      <button
        id="bar"
      >
        
    
      </button>
    </span>
  </div>,
]
`;

exports[`should select DOM elements 5`] = `
Array [
  <span
    id="baz"
  >
    
      
    <button
      id="bar"
    >
      
    
    </button>
  </span>,
]
`;

exports[`should select DOM elements 6`] = `
Array [
  <span
    id="baz"
  >
    
      
    <button
      id="bar"
    >
      
    
    </button>
  </span>,
]
`;
